argocd/helm/gitea/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: gitea
subsets:
- addresses:
  - ip: 192.168.0.218
  ports:
  - port: 3000
