argocd/helm/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
  - port: 3000
    targetPort: 3000
  clusterIP: "None"
